--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,3 +37,9 @@ extra:
     - icon: fontawesome/brands/github
       link: https://github.com/imartinf
 site_url: https://imartinf.github.io
+
+markdown_extensions:
+  - attr_list
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
